--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@ li:hover::before {
   color: #e86d15;
 }
 
-/* .icon {
+.icon {
   cursor: pointer;
-} */
+}
 /* .card {
   background-color: #000;
 } */
